--- a/.github/workflows/acttions.yml
+++ b/.github/workflows/acttions.yml
@@ -13,7 +13,7 @@ jobs:
           java-version: '23'
           distribution: 'adopt'
       - name: Build and test
-        working-directory: rentalService
+        working-directory: .
         run: |
           export SHELL=/bin/bash
           ./gradlew build
