--- a/.github/workflows/acttions.yml
+++ b/.github/workflows/acttions.yml
@@ -1,19 +1,26 @@
 name: CI
 on:
   - pull_request
+
 jobs:
   job1:
     runs-on: ubuntu-latest
     name: build
     steps:
+      # Étape 1 : Récupérer le code du dépôt
       - uses: actions/checkout@v2
+
+      # Étape 2 : Configurer la version de Java
       - name: Set up JDK 23
         uses: actions/setup-java@v3
         with:
           java-version: '23'
           distribution: 'adopt'
+
+      # Étape 3 : Donner les permissions d'exécution au fichier gradlew
+      - name: Grant execution permissions to gradlew
+        run: chmod +x ./gradlew
+
+      # Étape 4 : Construire et tester avec Gradle
       - name: Build and test
-        working-directory: .
-        run: |
-          export SHELL=/bin/bash
-          ./gradlew build
+        run: ./gradlew build
