--- a/.github/workflows/acttions.yml
+++ b/.github/workflows/acttions.yml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     name: build
     steps:
+      - name: make gradlew executable
+        run: chmod +x ./gradlew
       - uses: actions/checkout@v2
       - name: Set up JDK 23
         uses: actions/setup-java@v3
