--- a/deployment.yml
+++ b/deployment.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: rentalservice
-          image: charroux/rentalservice:1
+          image: dstndiaye/rentalservice:v2
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
